# peewee_migrate2

./: .gitignore  .travis.yml  CONTRIBUTING.rst  Makefile  README.rst  docker-compose.yaml  pyproject.toml  requirements-tests.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: tests.yml
peewee_migrate/: __init__.py  auto.py  cli.py  migrator.py  router.py  utils.py
tests/: conftest.py  test_cli.py  test_migrator.py  test_router.py
tests/migrations/: 004_test_insert.py
